// Copyright (C) 2017 go-nebulas authors
//
// This file is part of the go-nebulas library.
//
// the go-nebulas library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-nebulas library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-nebulas library.  If not, see <http://www.gnu.org/licenses/>.
//
syntax = "proto3";
package corepb;

message Account {
    uint64 balance = 1;
    uint64 nonce = 2;
}

message Transaction {
    bytes hash  = 1;
    bytes from = 2;
    bytes to = 3;
    uint64 value = 4;
    uint64 nonce = 5;
    int64 timestamp = 6;
    bytes data = 7;
    uint32 chainID = 8;
    uint32 alg = 9;    
    bytes sign = 10;
}

message BlockHeader {
    bytes hash = 1;
    bytes parentHash = 2;
    bytes stateRoot = 3;
    uint64 nonce = 4;
    bytes coinbase = 5;
    int64 timestamp = 6;
    uint32 chainID = 7;

}

message Block {
    BlockHeader header = 1;
    repeated Transaction transactions = 2;
}
